--- a/www/book.html
+++ b/www/book.html
@@ -24,6 +24,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 
+    <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
     <script>
@@ -86,57 +87,40 @@
 
   </div>
 </header>
-
+  
 
 <div class="container-fluid">
-    <h4 style="font-weight: bold;">Detail Order</h4>
+    <button class="ff2 bookbtn">BOOK</button>
 
-    <br>
-    <img src="img/profil.png" width="70" alt="" class="cust-img img-rounded2">
-    <p class="ff2 text-center">Jennifer L</p>
-
-    <div class="menu-list">
-        <span class="ff2">Menu Pesanan :</span>
-        <br>
-
-        <table class="table">
-            <tr>
-                <td>Cah Kangkung</td>
-                <td>x 1</td>
-            </tr>
-
-            <tr>
-                <td>Terong Sambal</td>
-                <td>x 1</td>
-            </tr>
-
-            <tr>
-                <td>Udang Goreng</td>
-                <td>x 2</td>
-            </tr>
-
-            <tr>
-                <td>Teh Tarik</td>
-                <td>x 2</td>
-            </tr>
-        </table>
-    </div>
-
-    <br>
-
-    <span class="ff2">Alamat Pengantaran :</span>
-
-    <br>
-    <br>
-
-    <span class="ff2">
-            Jalan MH Thamrin No.124, Kelurahan Sei Rengas II, Kecamatan Medan Area, Kota Medan, Sumatera Utara 20212
+    <span class="midd">
+        Nomor Order : <b>9809876</b>
+        <br><br><br><br>
     </span>
 
-    <br>
+    <span>Alamat Pengantaran :</span>
+    <br><br>
+    <div class="col-xs-3" style="padding: 0">
+        <img src="img/location.png" width="60" alt="" class="img-responsive">
+    </div>
 
-    <button class="btn btnorder" onclick="window.location.href='order-start.html'">MULAI</button>
+    <div class="col-xs-9" style="padding: 0">
+        <span style="font-size: 12px;">
+            Jalan MH Thamrin No.124, Kelurahan Sei Rengas II, 
+            Kecamatan Medan Area, Kota Medan, Sumatera 
+            Utara 20212
+        </span>
+    </div>
+    
+    <div class="col-xs-12 mtop" style="padding: 0;">
+        <span class="mtop2" style="display: block;">Metode Pembayaran :</span>
+        <span class="ff2" style="font-size: 25px;">CASH</span>
+    </div>
+
+
+
+
 </div>
-  
+
+
 </body>
 </html>
