--- a/www/ewallet.html
+++ b/www/ewallet.html
@@ -89,53 +89,17 @@
 
 
 <div class="container-fluid">
-    <h4 style="font-weight: bold;">Detail Order</h4>
-
-    <br>
-    <img src="img/profil.png" width="70" alt="" class="cust-img img-rounded2">
-    <p class="ff2 text-center">Jennifer L</p>
-
-    <div class="menu-list">
-        <span class="ff2">Menu Pesanan :</span>
-        <br>
-
-        <table class="table">
-            <tr>
-                <td>Cah Kangkung</td>
-                <td>x 1</td>
-            </tr>
-
-            <tr>
-                <td>Terong Sambal</td>
-                <td>x 1</td>
-            </tr>
-
-            <tr>
-                <td>Udang Goreng</td>
-                <td>x 2</td>
-            </tr>
-
-            <tr>
-                <td>Teh Tarik</td>
-                <td>x 2</td>
-            </tr>
-        </table>
-    </div>
-
+    <h4 style="font-weight: bold;">Jumlah Saldo E-Wallet</h4>
     <br>
 
-    <span class="ff2">Alamat Pengantaran :</span>
-
-    <br>
+    <p style="font-size: 12px;">Jumlah saldo pada E-Wallet driver adalah total dari Top-up customer.</p>
     <br>
 
-    <span class="ff2">
-            Jalan MH Thamrin No.124, Kelurahan Sei Rengas II, Kecamatan Medan Area, Kota Medan, Sumatera Utara 20212
-    </span>
-
+    <h3 class="text-center balance">Rp 500.000,-</h3>
     <br>
 
-    <button class="btn btnorder" onclick="window.location.href='order-start.html'">MULAI</button>
+    <a href="ewallet-history.html" class="chk">Lihat History Top-Up</a>
+
 </div>
   
 </body>
