--- a/www/order-finish.html
+++ b/www/order-finish.html
@@ -89,11 +89,7 @@
 
 
 <div class="container-fluid">
-    <h4 style="font-weight: bold;">Detail Order</h4>
-
-    <br>
-    <img src="img/profil.png" width="70" alt="" class="cust-img img-rounded2">
-    <p class="ff2 text-center">Jennifer L</p>
+    <h4 style="font-weight: bold;">Detail Pembayaran</h4>
 
     <div class="menu-list">
         <span class="ff2">Menu Pesanan :</span>
@@ -101,41 +97,54 @@
 
         <table class="table">
             <tr>
-                <td>Cah Kangkung</td>
-                <td>x 1</td>
+                <td>Cah Kangkung (1)</td>
+                <td>Rp 15.000,-</td>
             </tr>
 
             <tr>
-                <td>Terong Sambal</td>
-                <td>x 1</td>
+                <td>Terong Sambal (1)</td>
+                <td>Rp 12.000,-</td>
             </tr>
 
             <tr>
-                <td>Udang Goreng</td>
-                <td>x 2</td>
+                <td>Udang Goreng (2)</td>
+                <td>Rp 30.000,-</td>
             </tr>
 
             <tr>
-                <td>Teh Tarik</td>
-                <td>x 2</td>
+                <td>Teh Tarik (2)</td>
+                <td>Rp 18.000,-</td>
             </tr>
         </table>
+
+        <table class="table total">
+            <tr style="border-top:1px solid black !important;">
+                <td><span class="ff2">TOTAL</span></td>
+                <td><span class="ff2">Rp 75.000,-</span></td>
+            </tr>
+                
+            <tr>
+                <td><span class="ff2">Biaya Pengiriman</span></td>
+                <td><span class="ff2">Rp 15.000,-</span></td>
+            </tr>
+
+            <tr>
+                <td><span class="ff2">GRAND TOTAL :</span></td>
+            </tr>
+        </table>
+
+        <span class="gtotal">Rp 90.000,-</span>
     </div>
 
     <br>
 
-    <span class="ff2">Alamat Pengantaran :</span>
-
+    <span class="ff2">Metode Pembayaran :</span>
     <br>
-    <br>
-
-    <span class="ff2">
-            Jalan MH Thamrin No.124, Kelurahan Sei Rengas II, Kecamatan Medan Area, Kota Medan, Sumatera Utara 20212
-    </span>
+    <h2 class="ff2">CASH</h2>
 
     <br>
 
-    <button class="btn btnorder" onclick="window.location.href='order-start.html'">MULAI</button>
+    <button class="btn btnorder" onclick="window.location.href='index.html'">OK</button>
 </div>
   
 </body>
