--- a/www/ewallet-history.html
+++ b/www/ewallet-history.html
@@ -34,7 +34,7 @@
     
 
 </head>
-<body>
+<body style="background-color: #efefef;">
      <!-- <div class="overlay"></div>
          <nav id="sidebar">
             <div id="main-nav">
@@ -68,75 +68,90 @@
           </div>
         </nav> -->
      
-<header>
+    <header>
 
-  <div id="main-nav">
+    <div id="main-nav">
 
-    <nav class="navbar">
-        <div class="navbar-header">
-            <button onclick="goBack()" id="back"><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
-            <div class="navbar-brand text-center">
-                <img src="img/mylogo.png" alt="" class="img-responsive" width="85" style="margin:-12% 0 0 -15%;">
-                <h4 style="color:#e8af00;font-weight: bold;margin-right:25px;">Driver</h4>
+        <nav class="navbar">
+            <div class="navbar-header">
+                <button onclick="goBack()" id="back"><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
+                <div class="navbar-brand text-center">
+                    <img src="img/mylogo.png" alt="" class="img-responsive" width="85" style="margin:-12% 0 0 -15%;">
+                    <h4 style="color:#e8af00;font-weight: bold;margin-right:25px;">Driver</h4>
+                </div>
+            </div>
+
+        </div>
+        </nav>
+
+    </div>
+    </header>
+
+
+    <div class="container-fluid">
+        <h4 style="font-weight: bold;">Riwayat Top-up</h4>
+    </div>
+
+    <div class="rw">
+        <div class="container-fluid">
+            <span class="date">12 Juli 2018, 15.00</span>
+            <hr style="margin: 0;padding: 3px 0;">
+
+            <div class="col-xs-6" style="padding: 0">
+                <h5 style="font-weight: bold;">Top-up E-Wallet</h5>
+
+                <span>Jennifer L</span>
+                <br>
+                <span class="balance2">Rp 100.000,-</span>
+            </div>
+
+            <div class="col-xs-6" style="padding: 0">
+                <h4 style="font-weight: bold;text-align: center;padding-top: 15px;">SUKSES</h4>
             </div>
         </div>
-
-      </div>
-    </nav>
-
-  </div>
-</header>
-
-
-<div class="container-fluid">
-    <h4 style="font-weight: bold;">Detail Order</h4>
-
-    <br>
-    <img src="img/profil.png" width="70" alt="" class="cust-img img-rounded2">
-    <p class="ff2 text-center">Jennifer L</p>
-
-    <div class="menu-list">
-        <span class="ff2">Menu Pesanan :</span>
-        <br>
-
-        <table class="table">
-            <tr>
-                <td>Cah Kangkung</td>
-                <td>x 1</td>
-            </tr>
-
-            <tr>
-                <td>Terong Sambal</td>
-                <td>x 1</td>
-            </tr>
-
-            <tr>
-                <td>Udang Goreng</td>
-                <td>x 2</td>
-            </tr>
-
-            <tr>
-                <td>Teh Tarik</td>
-                <td>x 2</td>
-            </tr>
-        </table>
     </div>
 
     <br>
 
-    <span class="ff2">Alamat Pengantaran :</span>
+    <div class="rw">
+        <div class="container-fluid">
+            <span class="date">12 Juli 2018, 15.00</span>
+            <hr style="margin: 0;padding: 3px 0;">
+
+            <div class="col-xs-6" style="padding: 0">
+                <h5 style="font-weight: bold;">Top-up E-Wallet</h5>
+
+                <span>Jennifer L</span>
+                <br>
+                <span class="balance2">Rp 200.000,-</span>
+            </div>
+
+            <div class="col-xs-6" style="padding: 0">
+                <h4 style="font-weight: bold;text-align: center;padding-top: 15px;">SUKSES</h4>
+            </div>
+        </div>
+    </div>
 
     <br>
-    <br>
 
-    <span class="ff2">
-            Jalan MH Thamrin No.124, Kelurahan Sei Rengas II, Kecamatan Medan Area, Kota Medan, Sumatera Utara 20212
-    </span>
+    <div class="rw">
+        <div class="container-fluid">
+            <span class="date">12 Juli 2018, 15.00</span>
+            <hr style="margin: 0;padding: 3px 0;">
 
-    <br>
+            <div class="col-xs-6" style="padding: 0">
+                <h5 style="font-weight: bold;">Top-up E-Wallet</h5>
 
-    <button class="btn btnorder" onclick="window.location.href='order-start.html'">MULAI</button>
-</div>
+                <span>Jennifer L</span>
+                <br>
+                <span class="balance2">Rp 200.000,-</span>
+            </div>
+
+            <div class="col-xs-6" style="padding: 0">
+                <h4 style="font-weight: bold;text-align: center;padding-top: 15px;">SUKSES</h4>
+            </div>
+        </div>
+    </div>
   
 </body>
 </html>
