--- a/www/login.html
+++ b/www/login.html
@@ -203,7 +203,7 @@
     </style>
         
 </head>
-<body id="register">
+<body id="index">
      
      <!-- snackbar -->
      <div id="snackbar"></div>
