cek multiple ongoing

--- a/www/book.html
+++ b/www/book.html
@@ -32,6 +32,7 @@
     <script src="js/acl.js"></script>
     <script src="js/routing.js"></script>
     <script src="js/book.js"></script>
+    <script src="js/cekorder.js"></script>
 
 </head>
 <body id="book" onload="otentikasi('book');">
