fixed navigate button

--- a/www/order-start.html
+++ b/www/order-start.html
@@ -131,7 +131,7 @@
      
        
         <div style="width:50%; float:left;">
-          <a id="bnavigate" href="geo:38.897096,-77.036545"> <img src="img/gmaps.png" width="39" alt=""> NAVIGASI </a>
+          <a id="bnavigate"> <img src="img/gmaps.png" width="39" alt=""> NAVIGASI </a>
         </div>
 
         <div style="width:50%; float:left;">
