--- a/www/login.html
+++ b/www/login.html
@@ -160,20 +160,16 @@
     
         /*loader */
         .loader {
-          border: 16px solid #000;
-          border-radius: 50%;
-          border-top: 16px solid #EAB700;
           width: 75px;
           height: 75px;
-          -webkit-animation: spin 2s linear infinite;
-          animation: spin 2s linear infinite;
           margin-left: auto;
           margin-right: auto;
           display: none;
           z-index: 10;
           position: absolute;
-          top: 25%;
+          top: 30%;
           left: 38%;
+          background-image: url(../images/zoomloader.gif);
         }
 
         @-webkit-keyframes spin {
