fixed navigate button

--- a/www/order-start.html
+++ b/www/order-start.html
@@ -31,7 +31,7 @@
     
     <script src="js/acl.js"></script>
     <script src="js/routing.js"></script>
-    <script src="js/order.js"></script>
+    <script src="js/order_start.js"></script>
     <script src="js/cekorder.js"></script>
     
 </head>
