fixing order history

--- a/www/ongoing.html
+++ b/www/ongoing.html
@@ -73,7 +73,7 @@
         <h4 style="font-weight: bold;">On-going Order</h4>
     </div>
 
-    <a href="order.html" style="text-decoration: none;">
+    <a href="order.html" style="text-decoration: none;" id="ongoinglink">
         <div class="rw">
             <div class="container-fluid">
                 <span class="ff2" style="padding-right: 25px;" id="ordercode"></span>
