--- a/www/index.html
+++ b/www/index.html
@@ -67,6 +67,14 @@
 
 <div class="container-fluid">
   
+    <br>
+    <table>
+        <tr> <td> <button onclick="window.plugins.insomnia.keepAwake()">keep awake</button>
+                  <button onclick="window.plugins.insomnia.allowSleepAgain()">allow sleep again</button>
+         </td> </tr>
+    </table>
+
+  
   <div class="col-xs-12 mtop3" style="padding: 0;">
     
      <div class="col-xs-4 iconbox">
