--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,10 @@
     <script src="js/acl.js"></script>
     <script src="js/routing.js"></script>
     <script src="js/cekorder.js"></script>
+    
+    <script type="text/javascript">
+       sleep('1');
+    </script>
 
 </head>
 <body id="index" onload="otentikasi('index');">
@@ -66,14 +70,6 @@
 
 
 <div class="container-fluid">
-  
-    <br>
-    <table>
-        <tr> <td> <button onclick="window.plugins.insomnia.keepAwake()">keep awake</button>
-                  <button onclick="window.plugins.insomnia.allowSleepAgain()">allow sleep again</button>
-         </td> </tr>
-    </table>
-
   
   <div class="col-xs-12 mtop3" style="padding: 0;">
     
