--- a/www/index.html
+++ b/www/index.html
@@ -37,10 +37,7 @@
     <script src="js/acl.js"></script>
     <script src="js/routing.js"></script>
     <script src="js/cekorder.js"></script>
-    
-    <script type="text/javascript">
-       window.plugins.insomnia.allowSleepAgain();
-    </script>
+    <script src="js/home.js"></script>
 
 </head>
 <body id="index" onload="otentikasi('index');">
@@ -73,8 +70,8 @@
   
     <br>
     <table>
-        <tr> <td> <button onclick="sleep('1')">keep awake</button>
-                  <button onclick="sleep('0')">allow sleep again</button>
+        <tr> <td> <button onclick="sleep(1)">keep awake</button>
+                  <button onclick="sleep(0)">allow sleep again</button>
          </td> </tr>
     </table>
 
