fixed map navigate

--- a/www/order-start.html
+++ b/www/order-start.html
@@ -96,7 +96,8 @@
      
        
         <div style="width:52%; float:left;">
-          <a id="bnavigate"> <img src="img/gmaps.png" width="39" alt=""> NAVIGASI </a>
+          <input type="hidden" id="hcoor">
+          <a id="bnavigate" onclick="navigate();"> <img src="img/gmaps.png" width="39"> NAVIGASI </a>
         </div>
 
         <div style="width:48%; float:left;">
