--- a/www/order-history.html
+++ b/www/order-history.html
@@ -32,7 +32,6 @@
     <script src="js/acl.js"></script>
     <script src="js/routing.js"></script>
     <script src="js/order_history.js"></script>
-    <script src="js/cekorder.js"></script>
     
     <script type="text/javascript">
         function goBack() { window.location = "index.html"; }
@@ -101,6 +100,13 @@
         </div>
     </div> <br>
 -->
-  
+ 
+<script src="js/cekorder.js"></script> 
+<script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript">
+    app.initialize(); // method penting untuk initilize
+</script>
+    
 </body>
 </html>
